--- a/notebooks/photometry/01.00-Source-detection.ipynb
+++ b/notebooks/photometry/01.00-Source-detection.ipynb
@@ -24,13 +24,15 @@
    "source": [
     "The next series of notebooks will describe how to do source detection.\n",
     "\n",
-    "### The notebooks in this part of the guide draw heavily from the excellent [photutils documentation](https://photutils.readthedocs.io/en/stable/)"
+    "```{note}\n",
+    "The notebooks in this part of the guide draw heavily from the excellent [photutils documentation](https://photutils.readthedocs.io/en/stable/)\n",
+    "```"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -44,9 +46,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
